# Avalon-Scap-Compliance-Hub

./: Cargo.toml  LICENSE  README.md
migrations/: 000001__initial_multi_tenant_schema.sql  000002__add_host_groups_and_memberships.sql  000004__add_description_to_hosts.sql  000005__seed_test_data.sql.bak
src/: handlers.rs  main.rs  models.rs
templates/: dashboard.html
templates/fragments/: new-group-form.html  new-host-form.html  new-org-form.html  org-detail.html  orgs.html
