[package]
name = "avalonscap-compliance-hub"
version = "0.1.0"
edition = "2021"
authors = ["Sean <avalonwavesoftware@gmail.com>"]
license = "GPL-3.0-or-later"  # Open-source friendly for Fedora

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templating
askama = "0.12"

# Database (SQLx = compile-time checked queries)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate"] }

# ARF parsing (ready for next step)
quick-xml = { version = "0.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# Tailwind helpers
axum-extra = { version = "0.9", features = ["typed-header"] }